--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numba==0.61.2
 rio-cogeo==5.4.1
 cartopy==0.24.1
 dask==2025.3.0
-dask
+dask[distributed]
 netCDF4==1.7.2
 pillow==11.1.0
 psutil==7.0.0
@@ -15,3 +15,5 @@ pyproj==3.7.1
 scikit-image==0.25.2
 tk
 tqdm
+psutil
+rio-cogeo
