--- a/config_.ini
+++ b/config_.ini
@@ -1,19 +1,19 @@
 [files]
-output_dir = results\gswp3
-climate_data_dir = ..\climate_data\mpi-esm1_ssp585_2021_2040
-plant_param_dir = plant_params
-fine_dem = data\srtm_1km_world_recalculated.tif
-land_sea_mask = data\worldclim_land_sea_mask.tif
+output_dir = results/hnd_test\access-esm1-5_ssp126_2041_2050/
+climate_data_dir = D:/OneDrive - CGIAR/projects/spatial_files/raster/nex-gddp-cmip6_HONDURAS_005/access-esm1-5_ssp126_2041_2050/
+plant_param_dir = hnd_crops
+fine_dem = D:/OneDrive - CGIAR/projects/spatial_files/raster/srtm_005_honduras_recalculated.tif
+land_sea_mask = D:/OneDrive - CGIAR/projects/spatial_files/raster/worldclim_land_sea_mask_honduras_005.tif
 texture_classes = data\usda_texture_classification.dat
 worldclim_precipitation_data_dir = data\worldclim_prec
 worldclim_temperature_data_dir = data\worldclim_temp
 
 [options]
-max_workers = 30
-no_tiles = 15
+max_workers = 5
+no_tiles = y
 use_scheduler = y
 irrigation = 0
-day_interval = 1
+day_interval = 10
 precipitation_downscaling_method = 1
 temperature_downscaling_method = 1
 output_format = geotiff
@@ -32,17 +32,16 @@ output_soil_data = y
 multiple_cropping_turnaround_time = 21
 remove_downscaled_climate = n
 rrpcf_interpolation_method = linear
-consider_crop_rotation = y
+consider_crop_rotation = n
 simulate_calcification = 0
 resolution = 4
 debug = 1
 
 [extent]
-upper_left_x = -25.0			! Longitude of upper left corner, Format as decimal degree
-upper_left_y = 39.0			! Latitude of upper left corner
-lower_right_x = 55.0			! Longitude of lower right corner
-lower_right_y = -36.0			! Latitude of lower right corner
-
+upper_left_x = -90
+upper_left_y = 17
+lower_right_x = -83
+lower_right_y = 12
 
 [climatevariability]
 consider_variability = y
@@ -51,7 +50,7 @@ consider_variability = y
 plot_for_each_crop = y
 
 [parameters.base_saturation]
-data_directory = ..\soilgrids\bsat
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\bsat
 weighting_method = 0
 weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
 conversion_factor = 1.0
@@ -60,7 +59,7 @@ interpolation_method = 0
 rel_member_func = base_sat
 
 [parameters.coarse_fragments]
-data_directory = ..\soilgrids\cfvo
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\cfvo
 weighting_method = 2
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 10
@@ -68,7 +67,7 @@ interpolation_method = 0
 rel_member_func = coarsefragments
 
 [parameters.clay_content]
-data_directory = ..\soilgrids\clay
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\clay
 weighting_method = 2
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 10
@@ -76,7 +75,7 @@ interpolation_method = 0
 rel_member_func = texture
 
 [parameters.gypsum]
-data_directory = ..\soilgrids\gyps
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\gyps
 weighting_method = 0
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 10
@@ -84,7 +83,7 @@ interpolation_method = 0
 rel_member_func = gypsum
 
 [parameters.pH]
-data_directory = ..\soilgrids\ph
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\ph
 weighting_method = 2
 weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
 conversion_factor = 10.0
@@ -92,7 +91,7 @@ interpolation_method = 0
 rel_member_func = ph
 
 [parameters.salinity]
-data_directory = ..\soilgrids\sal
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\sal
 weighting_method = 0
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 1
@@ -100,7 +99,7 @@ interpolation_method = 0
 rel_member_func = elco
 
 [parameters.sand_content]
-data_directory = ..\soilgrids\sand
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\sand
 weighting_method = 2
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 10
@@ -108,7 +107,7 @@ interpolation_method = 0
 rel_member_func = texture
 
 [parameters.soil_organic_carbon]
-data_directory = ..\soilgrids\soc
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\soc
 weighting_method = 1
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 100
@@ -116,7 +115,7 @@ interpolation_method = 0
 rel_member_func = organic_carbon
 
 [parameters.sodicity]
-data_directory = ..\soilgrids\sod
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\sod
 weighting_method = 0
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 1
@@ -124,9 +123,10 @@ interpolation_method = 0
 rel_member_func = esp
 
 [parameters.soildepth]
-data_directory = ..\soilgrids\soildepth
+data_directory = D:/OneDrive - CGIAR/projects/spatial_files/raster/soil/soilgrids_honduras_005\soildepth
 weighting_method = 0
 weighting_factors = 2,1.5,1,0.75,0.5,0.25
 conversion_factor = 100
 interpolation_method = 0
 rel_member_func = soildepth
+
