--- a/yaml_configurations/general_config_solutions.yaml
+++ b/yaml_configurations/general_config_solutions.yaml
@@ -8,9 +8,10 @@ GENERAL:
   plant_param_dir: 'plant_params/available'
   plant_params_output: 'pp_solutions'
   extent: [-25.0, 39.0, 55.0, -36.0	] ## xmin, ymax, xmax, ymin
-  final_resolution: [5] # {0: 0.5, 1: 0.25, 2: 0.1, 3: 0.08333333333333, 4: 0.041666666666666, 5: 0.008333333333333, 6: 0.00208333333333333}
-  max_workers: 30
-  no_tiles: 15
+  final_resolution: 5 # {0: 0.5, 1: 0.25, 2: 0.1, 3: 0.08333333333333, 4: 0.041666666666666, 5: 0.008333333333333, 6: 0.00208333333333333}
+  max_workers: 5
+  no_tiles: 1
+  day_interval: 10
   consider_crop_rotation: n
 
 
