--- a/yaml_configurations/response_functions.yaml
+++ b/yaml_configurations/response_functions.yaml
@@ -18,19 +18,82 @@ CROPS:
   c7: coffeearabica
   c8: tea
   c9: cocoa
+  c10: sugarcane
+  c11: cotton
+  c12: soy
   c13: banana
+  c14: sunflower
+  c15: sesame
+  c21: barley
+  c22: chickpea
+  c23: coconut
+  c26: tobacco
+  c27: onion
+  c28: tomato
+  c29: rubber
+  c30: coffeerobusta
+  c31: groundnut
+  c33: potato
+  c34: sorghum
+  c35: cowpea
 
 ST1:
   s1:
-    c1: [30]
+    c1: [15]
     c2: [30]
     c3: [50]
     c4: [24]
-    c5: [10,20,30]
+    c5: [50]
+    c6: [600]
+    c7: [33.33]
+    c8: [50]
+    c9: [20]
+    c10: [41]
+    c11: [30]
+    c12: [14.28]
+    c13: [400]
+    c14: [54]
+    c15: [50]
+    c21: [375]
+    c22: [15]
+    c23: [10.9]
+    c26: [30]
+    c27: [20]
+    c28: [50]
+    c29: [27]
+    c30: [50]
+    c31: [23]
+    c32: [23.3]
+    c33: [23.3]
+    c34: [29.4]
+    c35: [106.9]
 
   s2:
-    c1: [16]
-    c2: [20]
-    c3: [28]
-    c4: [3]
-    c5: [1,3,4]
+    c1: [9.1]
+    c2: [23.8]
+    c3: [11.8]
+    c4: [7]
+    c5: [11.7]
+    c6: [12.5]
+    c7: [15]
+    c8: []
+    c9: []
+    c10: []
+    c11: [17.9]
+    c12: [20]
+    c13: []
+    c14: [28.6]
+    c15: []
+    c21: [20]
+    c22: [26.3]
+    c23: []
+    c26: []
+    c27: []
+    c28: [7.9]
+    c29: [13.4]
+    c30: []
+    c31: []
+    c32: [14.3]
+    c33: [14.3]
+    c34: [6.2]
+    c35: []
