--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,3 +59,10 @@ markdown_extensions:
 
 extra_css:
   - stylesheets/extra.css
+  - stylesheets/extra.css
+  - https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css
+
+extra_javascript:
+  - https://code.jquery.com/jquery-3.7.0.min.js
+  - https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js
+  - javascripts/tables.js  # We will create this file next
